syntax = "proto3";

package idl;

option go_package = "./";

message douyin_relation_action_request {
  string token = 1; // 用户鉴权token
  int64 to_user_id = 2; // 对方用户id
  int32 action_type = 3; // 1-关注，2-取消关注
}

message douyin_relation_action_response {
  int32 status_code = 1; // 状态码，0-成功，其他值-失败
  string status_msg = 2; // 返回状态描述
}

service DouyinRelationActionService {
  rpc DouyinRelationAction(douyin_relation_action_request) returns (douyin_relation_action_response);
}