syntax = "proto3";
package video;
option go_package = "./video";

service VideoService {
  rpc GetVideoListByTime(GetVideoListByTimeReq) returns(GetVideoListByTimeResp);        // 按时间获取视频流
}

message GetVideoListByTimeReq {
  int64 latest_time = 1;   //限制返回视频的最新投稿时间戳，精确到秒，不填表示当前时间
  string token = 2;  //判断用户是否登录
}
message GetVideoListByTimeResp {
  repeated Video video_list = 1; // 视频列表
  int64 next_time = 2;  // 本次返回的视频中，发布最早的时间，作为下次请求时的latest_time
}

message Video {
  int64 video_id = 1;  //视频唯一标识
  int64 auther_id = 2; // 视频作者信息
  string play_url = 3;  // 视频播放地址
  string cover_url = 4;  // 视频封面地址
  string title = 5; // 视频标题
  int64 favorite_count = 6; // 视频的点赞总数
  int64 comment_count = 7; // 视频的评论总数
  bool is_favorite = 8;  // true-已点赞，false-未点赞
}


